--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,12 +24,15 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.12"
 appium-python-client = "*"
 loguru = "*"
 lxml = "*"
 numpy = "*"
 attrs = "*"
+str2bool = "^1.1"
+pillow = "^10.4.0"
+opencv-python = "^4.10.0.84"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
