--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ attrs = "*"
 str2bool = "^1.1"
 pillow = "^10.4.0"
 opencv-python = "^4.10.0.84"
+retrying = "^1.3.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
